--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "./node_modules/.bin/vite",
+    "dev": "vite dev",
     "build": "./node_modules/.bin/vite build",
     "lint": "./node_modules/.bin/eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "./node_modules/.bin/vite preview"
